@@ -166,6 +166,8 @@ extern int BlockFlash;
 extern bool ScrollRelease;
 //Public TakeScreen As Boolean
 extern bool TakeScreen;
+// EXTRA: Show any on-screen meta (HUD, debug prints, etc.)
+extern bool ShowOnScreenMeta;
 //Public LB As String  ' Line Break
 extern std::string LB;
 //Public EoT As String  ' End of Transmission for WINSOCK
